fixed bug where modal shifts content

--- a/static/stylesheets/global.scss
+++ b/static/stylesheets/global.scss
@@ -26,5 +26,5 @@ html {
 
 img,
 svg {
-	display: block;
+	display: inline-block;
 }
