--- a/static/stylesheets/guideline.scss
+++ b/static/stylesheets/guideline.scss
@@ -211,11 +211,11 @@ button {
 		-webkit-tap-highlight-color: transparent;
 		border-radius: 8px;
 
-		@media (hover: hover) {
-			&:hover {
-				opacity: 0.5;
-			}
-		}
+		// @media (hover: hover) {
+		// 	&:hover {
+		// 		opacity: 0.5;
+		// 	}
+		// }
 
 		&:active {
 			opacity: 1;
